--- a/argocd/applications/mlflow.yaml
+++ b/argocd/applications/mlflow.yaml
@@ -20,16 +20,21 @@ spec:
         postgresql:
           enabled: false
         extraEnvVars:
-          AWS_ACCESS_KEY_ID: "minio"
-          AWS_SECRET_ACCESS_KEY: "minio123"
-          MLFLOW_S3_ENDPOINT_URL: "http://minio.infra-tools.svc.cluster.local:9000"
-          MLFLOW_BACKEND_STORE_URI: "postgresql://mlflow:mlflowpass@mlflow-postgres.infra-tools.svc.cluster.local:5432/mlflow"
-          MLFLOW_ARTIFACT_ROOT: "s3://mlflow-artifacts"
+          - name: AWS_ACCESS_KEY_ID
+            value: minio
+          - name: AWS_SECRET_ACCESS_KEY
+            value: minio123
+          - name: MLFLOW_S3_ENDPOINT_URL
+            value: http://minio.infra-tools.svc.cluster.local:9000
+          - name: MLFLOW_BACKEND_STORE_URI
+            value: postgresql://mlflow:mlflowpass@mlflow-postgres-postgresql.infra-tools.svc.cluster.local:5432/mlflow
+          - name: MLFLOW_ARTIFACT_ROOT
+            value: s3://mlflow-artifacts
         extraArgs:
-          backend-store-uri: "$(MLFLOW_BACKEND_STORE_URI)"
-          default-artifact-root: "$(MLFLOW_ARTIFACT_ROOT)"
-          host: "0.0.0.0"
-          port: "5000"
+          - "--backend-store-uri=$(MLFLOW_BACKEND_STORE_URI)"
+          - "--default-artifact-root=$(MLFLOW_ARTIFACT_ROOT)"
+          - "--host=0.0.0.0"
+          - "--port=5000"
   destination:
     server: https://kubernetes.default.svc
     namespace: infra-tools
@@ -40,5 +45,6 @@ spec:
     syncOptions:
       - ServerSideApply=true
       - SkipDryRunOnMissingResource=true
+
 
 
