--- a/argocd/applications/postgres.yaml
+++ b/argocd/applications/postgres.yaml
@@ -10,7 +10,7 @@ spec:
     chart: postgresql
     targetRevision: 12.5.6
     helm:
-      values:
+      valuesObject:
         auth:
           username: mlflow
           password: mlflowpass
@@ -20,7 +20,7 @@ spec:
             enabled: false
   destination:
     server: https://kubernetes.default.svc
-    namespace: infra-tools
+    namespace: mlflow  # namespace для Postgres
   syncPolicy:
     automated:
       prune: true
@@ -29,5 +29,6 @@ spec:
       - CreateNamespace=true
       - ServerSideApply=true
       - SkipDryRunOnMissingResource=true
+
 
 
