--- a/argocd/applications/postgres.yaml
+++ b/argocd/applications/postgres.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: mlflow-postgres
-  namespace: infra-tools
+  namespace: argocd
 spec:
   project: default
   source:
